[package]
name = "redirect"
version = "1.0.0"
edition = "2021"
authors = ["Kushagra Gupta <kushgpt08@gmail.com>"]
description = "Emulate shell redirection in places where the command is not running in a shell"
license = "MIT"
keywords = ["redirect", "shell", "redirection"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
